Bug 1606807 - Protect the access of AsyncPanZoomController::mState in ReportCheckerboard(). r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D58657